@startuml

Feed "1" -- "*" FeedEntry
Feed "1" -- "*" Subscription
Subscription "*" -- "1" User
User "1" -- "*" UserFeedEntry
UserFeedEntry "*" -- "1" FeedEntry

class Feed {
  - name
  - iconUrl
}

class FeedEntry {
  - title
  - summary
  - link
  - updated
}

class UserFeedEntry {
  - read : boolean
}
@enduml
